--- a/client/docker-compose.yml
+++ b/client/docker-compose.yml
@@ -1,10 +1,9 @@
-version: "3.9"
-
 services:
-  dsa-visualization:
+  client:
     build:
-      context: ./client
-    container_name: dsa-visualizer-container
+      context: .
+      dockerfile: Dockerfile
+    image: yourdockerhubusername/stack-overflow-clone-client:latest
     ports:
       - "80:80"
-    restart: always
+    restart: unless-stopped
