--- a/client/Jenkinsfile
+++ b/client/Jenkinsfile
@@ -86,7 +86,7 @@ spec:
         }
 
         /* ============================
-             2. RUN TESTS (Optional)
+             2. TESTS
         ============================== */
         stage('Run Tests') {
             steps {
@@ -95,7 +95,7 @@ spec:
         }
 
         /* ============================
-             3. SONARQUBE ANALYSIS
+             3. SONARQUBE
         ============================== */
         stage('SonarQube Analysis') {
             steps {
@@ -114,7 +114,7 @@ spec:
         }
 
         /* ============================
-            4. LOGIN TO NEXUS DOCKER
+             4. DOCKER LOGIN
         ============================== */
         stage('Login to Docker Registry') {
             steps {
@@ -129,7 +129,7 @@ spec:
         }
 
         /* ============================
-            5. BUILD - TAG - PUSH IMAGE
+             5. BUILD - TAG - PUSH
         ============================== */
         stage('Build - Tag - Push Image') {
             steps {
@@ -144,22 +144,22 @@ spec:
             }
         }
 
+        /* ============================
+              6. CREATE NAMESPACE
+        ============================== */
         stage('Create Namespace if not exists') {
-    agent { label 'kubernetes' }
-    container('kubectl') {
-        steps {
-            script {
-                echo "Creating namespace 2401003 if it does not exist..."
-                sh """
-                kubectl get namespace 2401003 || kubectl create namespace 2401003
-                """
+            steps {
+                container('kubectl') {
+                    sh '''
+                        echo "Checking namespace..."
+                        kubectl get namespace ${NAMESPACE} || kubectl create namespace ${NAMESPACE}
+                    '''
+                }
             }
         }
-    }
-}
 
         /* ============================
-              6. K8s DEPLOY
+              7. DEPLOY TO K8s
         ============================== */
         stage('Deploy to Kubernetes') {
             steps {
