--- a/k8s/service.yaml
+++ b/k8s/service.yaml
@@ -2,7 +2,7 @@ apiVersion: v1
 kind: Service
 metadata:
   name: dsa-visualization-service
-  namespace: 2401003
+  namespace: "2401003"
 spec:
   selector:
     app: dsa-visualization
