--- a/k8s/deployment.yaml
+++ b/k8s/deployment.yaml
@@ -23,7 +23,7 @@ spec:
 
       containers:
         - name: dsa-visualization
-          image: nexus-service-for-docker-hosted-registry.nexus.svc.cluster.local:8085/2401003-project/dsa-visualization:latest
+          image: 127.0.0.1:30085/2401003-project/dsa-visualization:latest
           ports:
             - containerPort: 80
           resources:
