Update SonarQube config and ignore macOS system files

--- a/client/sonar-project.properties
+++ b/client/sonar-project.properties
@@ -1,6 +1,6 @@
 # Project Info
 sonar.projectKey=dsa-client
-sonar.projectName=dsa-client
+sonar.projectName=2401003
 sonar.projectVersion=1.0
 
 # Source Code
@@ -11,4 +11,4 @@ sonar.sourceEncoding=UTF-8
 sonar.host.url=http://sonarqube.imcc.com/
 
 # Token (replace <TOKEN> with your real one)
-sonar.login=sqp_e0e3c213ab7857825a01d21815675c649
+sonar.login=sqp_cd2a4f86088eab698df74af36e0d8f1773f2f72a
