--- a/client/Jenkinsfile
+++ b/client/Jenkinsfile
@@ -179,9 +179,10 @@ spec:
     }
 
     post {
-        always {
-           // cleanWs()
-           deleteDir()
+    always {
+        node {
+            // CleanWs()
+            deleteDir()
         }
     }
 }
