--- a/client/Jenkinsfile
+++ b/client/Jenkinsfile
@@ -1,9 +1,206 @@
+// pipeline {
+
+//     options {
+//         skipDefaultCheckout(true)
+//     }
+
+//     agent {
+//         kubernetes {
+//             yaml '''
+// apiVersion: v1
+// kind: Pod
+// spec:
+//   containers:
+
+//   - name: node
+//     image: node:18
+//     command: ["cat"]
+//     tty: true
+
+//   - name: sonar-scanner
+//     image: sonarsource/sonar-scanner-cli
+//     command: ["cat"]
+//     tty: true
+
+//   - name: kubectl
+//     image: bitnami/kubectl:latest
+//     command: ["cat"]
+//     tty: true
+//     securityContext:
+//       runAsUser: 0
+//       readOnlyRootFilesystem: false
+//     env:
+//       - name: KUBECONFIG
+//         value: /kube/config
+//     volumeMounts:
+//       - name: kubeconfig-secret
+//         mountPath: /kube/config
+//         subPath: kubeconfig
+
+//   - name: dind
+//     image: docker:dind
+//     securityContext:
+//       privileged: true
+//     env:
+//       - name: DOCKER_TLS_CERTDIR
+//         value: ""
+//     volumeMounts:
+//       - name: docker-config
+//         mountPath: /etc/docker/daemon.json
+//         subPath: daemon.json
+
+//   volumes:
+//     - name: docker-config
+//       configMap:
+//         name: docker-daemon-config
+
+//     - name: kubeconfig-secret
+//       secret:
+//         secretName: kubeconfig-secret
+// '''
+//         }
+//     }
+
+//     environment {
+//         PROJECT_KEY = "2401003-DSAV"
+//         IMAGE_NAME = "dsa-visualization"
+//         NAMESPACE = "2401003"
+//         REGISTRY = "nexus-service-for-docker-hosted-registry.nexus.svc.cluster.local:8085"
+//         REPO = "2401003-project"
+//     }
+
+//     stages {
+
+//         /* ============================
+//               0. CHECKOUT CODE
+//         ============================== */
+//         stage('Checkout Code') {
+//             steps {
+//                 git branch: 'main',
+//                     url: 'https://github.com/Ajay-1609/DSA-Visulize.git'
+//             }
+//         }
+
+//         /* ============================
+//               1. FRONTEND BUILD
+//         ============================== */
+//         stage('Build Frontend') {
+//             steps {
+//                 dir('client') {
+//                     container('node') {
+//                         sh '''
+//                             echo "Installing dependencies..."
+//                             npm install
+
+//                             echo "Building Vite project..."
+//                             npm run build
+//                         '''
+//                     }
+//                 }
+//             }
+//         }
+
+//         /* ============================
+//              2. TESTS
+//         ============================== */
+//         stage('Run Tests') {
+//             steps {
+//                 echo "No tests added. Skipping."
+//             }
+//         }
+
+//         /* ============================
+//              3. SONARQUBE
+//         ============================== */
+//         stage('SonarQube Analysis') {
+//             steps {
+//                 container('sonar-scanner') {
+//                     withCredentials([string(credentialsId: 'sonar-token-2401003', variable: 'SONAR_TOKEN')]) {
+//                         sh '''
+//                             sonar-scanner \
+//                                 -Dsonar.projectKey=2401003-DSAV \
+//                                 -Dsonar.sources=client/src \
+//                                 -Dsonar.host.url=http://my-sonarqube-sonarqube.sonarqube.svc.cluster.local:9000 \
+//                                 -Dsonar.login=$SONAR_TOKEN
+//                         '''
+//                     }
+//                 }
+//             }
+//         }
+
+//         /* ============================
+//              4. DOCKER LOGIN
+//         ============================== */
+//         stage('Login to Docker Registry') {
+//             steps {
+//                 container('dind') {
+//                     sh '''
+//                         docker --version
+//                         sleep 10
+//                         docker login $REGISTRY -u admin -p Changeme@2025
+//                     '''
+//                 }
+//             }
+//         }
+
+//         /* ============================
+//              5. BUILD - TAG - PUSH
+//         ============================== */
+//         stage('Build - Tag - Push Image') {
+//             steps {
+//                 container('dind') {
+//                     sh '''
+//                         docker build -t ${IMAGE_NAME}:latest ./client
+//                         docker tag ${IMAGE_NAME}:latest ${REGISTRY}/${REPO}/${IMAGE_NAME}:latest
+//                         docker push ${REGISTRY}/${REPO}/${IMAGE_NAME}:latest
+//                         docker image ls
+//                     '''
+//                 }
+//             }
+//         }
+
+//         /* ============================
+//               6. CREATE NAMESPACE
+//         ============================== */
+//         stage('Create Namespace if not exists') {
+//             steps {
+//                 container('kubectl') {
+//                     sh '''
+//                         echo "Checking namespace..."
+//                         kubectl get namespace ${NAMESPACE} || kubectl create namespace ${NAMESPACE}
+//                     '''
+//                 }
+//             }
+//         }
+
+//         /* ============================
+//               7. DEPLOY TO K8s
+//         ============================== */
+//         stage('Deploy to Kubernetes') {
+//             steps {
+//                 container('kubectl') {
+//                     dir('k8s') {
+//                         sh '''
+//                             echo "Applying Kubernetes Deployment..."
+//                             kubectl apply -n ${NAMESPACE} -f deployment.yaml
+//                         '''
+//                     }
+//                 }
+//             }
+//         }
+//     }
+// }
+
+//     post {
+//     always {
+//         node {
+//             // CleanWs()
+//             deleteDir()
+//         }
+//     } 
+//   }
+
 pipeline {
-
-    options {
-        skipDefaultCheckout(true)
-    }
-
     agent {
         kubernetes {
             yaml '''
@@ -63,16 +260,16 @@ spec:
 
     environment {
         PROJECT_KEY = "2401003-DSAV"
-        IMAGE_NAME = "dsa-visualization"
-        NAMESPACE = "2401003"
-        REGISTRY = "nexus-service-for-docker-hosted-registry.nexus.svc.cluster.local:8085"
-        REPO = "2401003-project"
+        IMAGE_NAME  = "dsa-visualization"
+        NAMESPACE   = "2401003"
+        REGISTRY    = "nexus-service-for-docker-hosted-registry.nexus.svc.cluster.local:8085"
+        REPO        = "2401003-project"
     }
 
     stages {
 
         /* ============================
-              0. CHECKOUT CODE
+              1. CHECKOUT
         ============================== */
         stage('Checkout Code') {
             steps {
@@ -82,7 +279,7 @@ spec:
         }
 
         /* ============================
-              1. FRONTEND BUILD
+              2. FRONTEND BUILD
         ============================== */
         stage('Build Frontend') {
             steps {
@@ -101,7 +298,7 @@ spec:
         }
 
         /* ============================
-             2. TESTS
+             3. TESTS
         ============================== */
         stage('Run Tests') {
             steps {
@@ -110,12 +307,18 @@ spec:
         }
 
         /* ============================
-             3. SONARQUBE
+             4. SONARQUBE
         ============================== */
         stage('SonarQube Analysis') {
             steps {
                 container('sonar-scanner') {
-                    withCredentials([string(credentialsId: 'sonar-token-2401003', variable: 'SONAR_TOKEN')]) {
+                    withCredentials([
+                        usernamePassword(
+                            credentialsId: 'sonar-token-2401003',
+                            usernameVariable: 'SONAR_USER',
+                            passwordVariable: 'SONAR_TOKEN'
+                        )
+                    ]) {
                         sh '''
                             sonar-scanner \
                                 -Dsonar.projectKey=2401003-DSAV \
@@ -129,14 +332,14 @@ spec:
         }
 
         /* ============================
-             4. DOCKER LOGIN
+             5. DOCKER LOGIN
         ============================== */
         stage('Login to Docker Registry') {
             steps {
                 container('dind') {
                     sh '''
                         docker --version
-                        sleep 10
+                        sleep 5
                         docker login $REGISTRY -u admin -p Changeme@2025
                     '''
                 }
@@ -144,7 +347,7 @@ spec:
         }
 
         /* ============================
-             5. BUILD - TAG - PUSH
+             6. BUILD - TAG - PUSH IMAGE
         ============================== */
         stage('Build - Tag - Push Image') {
             steps {
@@ -160,13 +363,12 @@ spec:
         }
 
         /* ============================
-              6. CREATE NAMESPACE
+              7. CREATE NAMESPACE
         ============================== */
         stage('Create Namespace if not exists') {
             steps {
                 container('kubectl') {
                     sh '''
-                        echo "Checking namespace..."
                         kubectl get namespace ${NAMESPACE} || kubectl create namespace ${NAMESPACE}
                     '''
                 }
@@ -174,14 +376,13 @@ spec:
         }
 
         /* ============================
-              7. DEPLOY TO K8s
+              8. DEPLOY TO K8s
         ============================== */
         stage('Deploy to Kubernetes') {
             steps {
                 container('kubectl') {
                     dir('k8s') {
                         sh '''
-                            echo "Applying Kubernetes Deployment..."
                             kubectl apply -n ${NAMESPACE} -f deployment.yaml
                         '''
                     }
@@ -189,13 +390,11 @@ spec:
             }
         }
     }
-}
 
     post {
-    always {
-        node {
-            // CleanWs()
+        always {
+            echo "Pipeline completed. Cleaning workspace..."
             deleteDir()
         }
-    } 
-  }
+    }
+}
