--- a/client/Jenkinsfile
+++ b/client/Jenkinsfile
@@ -1,206 +1,9 @@
-// pipeline {
-
-//     options {
-//         skipDefaultCheckout(true)
-//     }
-
-//     agent {
-//         kubernetes {
-//             yaml '''
-// apiVersion: v1
-// kind: Pod
-// spec:
-//   containers:
-
-//   - name: node
-//     image: node:18
-//     command: ["cat"]
-//     tty: true
-
-//   - name: sonar-scanner
-//     image: sonarsource/sonar-scanner-cli
-//     command: ["cat"]
-//     tty: true
-
-//   - name: kubectl
-//     image: bitnami/kubectl:latest
-//     command: ["cat"]
-//     tty: true
-//     securityContext:
-//       runAsUser: 0
-//       readOnlyRootFilesystem: false
-//     env:
-//       - name: KUBECONFIG
-//         value: /kube/config
-//     volumeMounts:
-//       - name: kubeconfig-secret
-//         mountPath: /kube/config
-//         subPath: kubeconfig
-
-//   - name: dind
-//     image: docker:dind
-//     securityContext:
-//       privileged: true
-//     env:
-//       - name: DOCKER_TLS_CERTDIR
-//         value: ""
-//     volumeMounts:
-//       - name: docker-config
-//         mountPath: /etc/docker/daemon.json
-//         subPath: daemon.json
-
-//   volumes:
-//     - name: docker-config
-//       configMap:
-//         name: docker-daemon-config
-
-//     - name: kubeconfig-secret
-//       secret:
-//         secretName: kubeconfig-secret
-// '''
-//         }
-//     }
-
-//     environment {
-//         PROJECT_KEY = "2401003-DSAV"
-//         IMAGE_NAME = "dsa-visualization"
-//         NAMESPACE = "2401003"
-//         REGISTRY = "nexus-service-for-docker-hosted-registry.nexus.svc.cluster.local:8085"
-//         REPO = "2401003-project"
-//     }
-
-//     stages {
-
-//         /* ============================
-//               0. CHECKOUT CODE
-//         ============================== */
-//         stage('Checkout Code') {
-//             steps {
-//                 git branch: 'main',
-//                     url: 'https://github.com/Ajay-1609/DSA-Visulize.git'
-//             }
-//         }
-
-//         /* ============================
-//               1. FRONTEND BUILD
-//         ============================== */
-//         stage('Build Frontend') {
-//             steps {
-//                 dir('client') {
-//                     container('node') {
-//                         sh '''
-//                             echo "Installing dependencies..."
-//                             npm install
-
-//                             echo "Building Vite project..."
-//                             npm run build
-//                         '''
-//                     }
-//                 }
-//             }
-//         }
-
-//         /* ============================
-//              2. TESTS
-//         ============================== */
-//         stage('Run Tests') {
-//             steps {
-//                 echo "No tests added. Skipping."
-//             }
-//         }
-
-//         /* ============================
-//              3. SONARQUBE
-//         ============================== */
-//         stage('SonarQube Analysis') {
-//             steps {
-//                 container('sonar-scanner') {
-//                     withCredentials([string(credentialsId: 'sonar-token-2401003', variable: 'SONAR_TOKEN')]) {
-//                         sh '''
-//                             sonar-scanner \
-//                                 -Dsonar.projectKey=2401003-DSAV \
-//                                 -Dsonar.sources=client/src \
-//                                 -Dsonar.host.url=http://my-sonarqube-sonarqube.sonarqube.svc.cluster.local:9000 \
-//                                 -Dsonar.login=$SONAR_TOKEN
-//                         '''
-//                     }
-//                 }
-//             }
-//         }
-
-//         /* ============================
-//              4. DOCKER LOGIN
-//         ============================== */
-//         stage('Login to Docker Registry') {
-//             steps {
-//                 container('dind') {
-//                     sh '''
-//                         docker --version
-//                         sleep 10
-//                         docker login $REGISTRY -u admin -p Changeme@2025
-//                     '''
-//                 }
-//             }
-//         }
-
-//         /* ============================
-//              5. BUILD - TAG - PUSH
-//         ============================== */
-//         stage('Build - Tag - Push Image') {
-//             steps {
-//                 container('dind') {
-//                     sh '''
-//                         docker build -t ${IMAGE_NAME}:latest ./client
-//                         docker tag ${IMAGE_NAME}:latest ${REGISTRY}/${REPO}/${IMAGE_NAME}:latest
-//                         docker push ${REGISTRY}/${REPO}/${IMAGE_NAME}:latest
-//                         docker image ls
-//                     '''
-//                 }
-//             }
-//         }
-
-//         /* ============================
-//               6. CREATE NAMESPACE
-//         ============================== */
-//         stage('Create Namespace if not exists') {
-//             steps {
-//                 container('kubectl') {
-//                     sh '''
-//                         echo "Checking namespace..."
-//                         kubectl get namespace ${NAMESPACE} || kubectl create namespace ${NAMESPACE}
-//                     '''
-//                 }
-//             }
-//         }
-
-//         /* ============================
-//               7. DEPLOY TO K8s
-//         ============================== */
-//         stage('Deploy to Kubernetes') {
-//             steps {
-//                 container('kubectl') {
-//                     dir('k8s') {
-//                         sh '''
-//                             echo "Applying Kubernetes Deployment..."
-//                             kubectl apply -n ${NAMESPACE} -f deployment.yaml
-//                         '''
-//                     }
-//                 }
-//             }
-//         }
-//     }
-// }
-
-//     post {
-//     always {
-//         node {
-//             // CleanWs()
-//             deleteDir()
-//         }
-//     } 
-//   }
-
 pipeline {
+
+    options {
+        skipDefaultCheckout(true)
+    }
+
     agent {
         kubernetes {
             yaml '''
@@ -260,16 +63,16 @@ spec:
 
     environment {
         PROJECT_KEY = "2401003-DSAV"
-        IMAGE_NAME  = "dsa-visualization"
-        NAMESPACE   = "2401003"
-        REGISTRY    = "nexus-service-for-docker-hosted-registry.nexus.svc.cluster.local:8085"
-        REPO        = "2401003-project"
+        IMAGE_NAME = "dsa-visualization"
+        NAMESPACE = "2401003"
+        REGISTRY = "nexus-service-for-docker-hosted-registry.nexus.svc.cluster.local:8085"
+        REPO = "2401003-project"
     }
 
     stages {
 
         /* ============================
-              1. CHECKOUT
+              0. CHECKOUT CODE
         ============================== */
         stage('Checkout Code') {
             steps {
@@ -279,7 +82,7 @@ spec:
         }
 
         /* ============================
-              2. FRONTEND BUILD
+              1. FRONTEND BUILD
         ============================== */
         stage('Build Frontend') {
             steps {
@@ -298,7 +101,7 @@ spec:
         }
 
         /* ============================
-             3. TESTS
+             2. TESTS
         ============================== */
         stage('Run Tests') {
             steps {
@@ -307,18 +110,12 @@ spec:
         }
 
         /* ============================
-             4. SONARQUBE
+             3. SONARQUBE
         ============================== */
         stage('SonarQube Analysis') {
             steps {
                 container('sonar-scanner') {
-                    withCredentials([
-                        usernamePassword(
-                            credentialsId: 'sonar-token-2401003',
-                            usernameVariable: 'SONAR_USER',
-                            passwordVariable: 'SONAR_TOKEN'
-                        )
-                    ]) {
+                    withCredentials([string(credentialsId: 'sonar-token-2401003', variable: 'SONAR_TOKEN')]) {
                         sh '''
                             sonar-scanner \
                                 -Dsonar.projectKey=2401003-DSAV \
@@ -332,14 +129,14 @@ spec:
         }
 
         /* ============================
-             5. DOCKER LOGIN
+             4. DOCKER LOGIN
         ============================== */
         stage('Login to Docker Registry') {
             steps {
                 container('dind') {
                     sh '''
                         docker --version
-                        sleep 5
+                        sleep 10
                         docker login $REGISTRY -u admin -p Changeme@2025
                     '''
                 }
@@ -347,7 +144,7 @@ spec:
         }
 
         /* ============================
-             6. BUILD - TAG - PUSH IMAGE
+             5. BUILD - TAG - PUSH
         ============================== */
         stage('Build - Tag - Push Image') {
             steps {
@@ -363,12 +160,13 @@ spec:
         }
 
         /* ============================
-              7. CREATE NAMESPACE
+              6. CREATE NAMESPACE
         ============================== */
         stage('Create Namespace if not exists') {
             steps {
                 container('kubectl') {
                     sh '''
+                        echo "Checking namespace..."
                         kubectl get namespace ${NAMESPACE} || kubectl create namespace ${NAMESPACE}
                     '''
                 }
@@ -376,13 +174,14 @@ spec:
         }
 
         /* ============================
-              8. DEPLOY TO K8s
+              7. DEPLOY TO K8s
         ============================== */
         stage('Deploy to Kubernetes') {
             steps {
                 container('kubectl') {
                     dir('k8s') {
                         sh '''
+                            echo "Applying Kubernetes Deployment..."
                             kubectl apply -n ${NAMESPACE} -f deployment.yaml
                         '''
                     }
@@ -390,11 +189,12 @@ spec:
             }
         }
     }
-
+}
     post {
-        always {
-            echo "Pipeline completed. Cleaning workspace..."
+    always {
+        node {
+            // CleanWs()
             deleteDir()
         }
-    }
-}
+    } 
+  }
